[gd_scene load_steps=5 format=3 uid="uid://c60tahepslln0"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_emyso"]
[ext_resource type="Script" path="res://Script/UI/SkillsPanel.gd" id="2_nve80"]
[ext_resource type="PackedScene" uid="uid://bwegnxa4rtgh2" path="res://Scene/UI/TitleBar.tscn" id="4_ghlg2"]
[ext_resource type="PackedScene" uid="uid://rho7mcbqxaku" path="res://Scene/UI/ConfigSkillInfo.tscn" id="4_sooas"]

[node name="SkillsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_emyso")
script = ExtResource("2_nve80")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SharpPanel"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleBar" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("4_ghlg2")]
layout_mode = 2
title_text = "技能配置"

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="SkillsPage" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
tabs_visible = false

[node name="SkillInfo" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillsPage" instance=ExtResource("4_sooas")]
layout_mode = 2

[node name="SkillInfo2" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillsPage" instance=ExtResource("4_sooas")]
visible = false
layout_mode = 2

[node name="SkillInfo3" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillsPage" instance=ExtResource("4_sooas")]
visible = false
layout_mode = 2

[node name="SkillInfo4" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillsPage" instance=ExtResource("4_sooas")]
visible = false
layout_mode = 2

[node name="SkillInfo5" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillsPage" instance=ExtResource("4_sooas")]
visible = false
layout_mode = 2

[node name="SkillInfo6" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillsPage" instance=ExtResource("4_sooas")]
visible = false
layout_mode = 2

[node name="SkillInfo7" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillsPage" instance=ExtResource("4_sooas")]
visible = false
layout_mode = 2

[node name="SkillBtns" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChangeSkill1" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillBtns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "技能1"

[node name="ChangeSkill2" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillBtns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "技能2"

[node name="ChangeSkill3" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillBtns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "技能3"

[node name="ChangeSkill4" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillBtns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "技能4"

[node name="ChangeSkill5" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillBtns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "技能5"

[node name="ChangeSkill6" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillBtns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "被动1"

[node name="ChangeSkill7" type="Button" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/SkillBtns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "被动2"
